making the front page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My First Page</title>
+    <title>Chengda Zhang</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <main><p>THIS IS MY MAIN CODE</p></main>
+    <header>
+        <h1>Chengda Zhang, MD</h1>
+        <nav>
+            <a class="current" href="index.html">Home</a>
+            <a href="about.html">About me</a>
+            <a href="education.html">Education</a>
+            <a href="skills.html">Skills</a>
+            <a href="publications.html">Publications</a>
+            <a href="mailto:zhangcd07@outlook.com">Contact me</a>
+        </nav>
+    </header>
+    <section class="left"><img src="images/photo.jpg" alt="photo of Chengda Zhang"></section>
+    <section class="right">
+        <h2>Chengda Zhang</h2>
+        <p>
+            I am a 32 years-old internist, in-training intensivist, husband and father, who is passionate about patient care and all technologies in adult critical care. My other history includes born and raised in China, graduated from Tsinghua University/Peking Union Medical College, finished internal medicine residency training in Beaumont Hospital, Michigan in 2019.
+        </p>
+        <h3>Assessment and plan</h3>
+        <p>
+            32 years-old physician, at the beginning of my career. The plan would include:
+        </p>
+        <ul>
+            <li>Always take care of my patients</li>
+            <li>Apply for clinical informatics fellowship</li>
+            <li>Promote and get involved in Tele-ICU and related technology developement</li>
+            <li>Promote data-driven real-time decision support for ICU providers</li>
+            <li>……</li>
+        </ul>
+    </section>
+
     <footer>
-        <p>Think of a more interesting footer</p>
+        <p>&copy; 2020 by Chengda Zhang</p>
     </footer>
 </body>
 </html>
