--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <section class="left"><img src="images/photo.jpg" alt="photo of Chengda Zhang"></section>
     <section class="right">
-        <h2>Chengda Zhang</h2>
+        <h2>One liner</h2>
         <p>
             I am a 32 years-old internist, in-training intensivist, husband and father, who is passionate about patient care and all technologies in adult critical care. My other history includes born and raised in China, graduated from Tsinghua University/Peking Union Medical College, finished internal medicine residency training in Beaumont Hospital, Michigan in 2019.
         </p>
