--- a/about.html
+++ b/about.html
@@ -7,30 +7,36 @@
 </head>
 <body>
     <header>
-        <h1>Chengda Zhang, MD</h1>
+        <h1 id="top">Chengda Zhang, MD</h1>
         <nav>
             <a href="index.html">Home</a>
             <a class="current" href="about.html">About me</a>
-            <a href="education.html">Education</a>
+            <a href="Experience.html">Experience</a>
             <a href="skills.html">Skills</a>
             <a href="publications.html">Publications</a>
             <a href="mailto:zhangcd07@outlook.com">Contact me</a>
         </nav>
     </header>
-    <p>
-        It was always recommended to start a personal statement with an unforgettable case, usually affects me personally. However, I am going to start mine with a series of cases that I have never met in person. In 2012, when I was in my fifth year of medical school, I was introduced into a research project, trying to identify the effectiveness of using procalcitonin as a diagnostic test to differentiate lupus flare from systemic infection in pediatric patients. My mentor told me that there were at least 100 cases in our hospital during the past 5 years, much more than any other reported cohort. The whole hospital was still running on a paper-based information system. Even though all units had electronic workstations which could do orders, notes and flowsheets, every staff was required to print out and maintain a paper chart as patient’s only medical record. This of course created lots of huddles in clinical work: long wait for patient’s chart to arrive on the floor when patient has already arrived requiring immediate attention, extra work for staff trying to incorporate pieces of information into a chart, etc. What struck me at that time, was that I 
-    </p>
-    <p>
-        My primary drive to enter informatics is research. Critical care medicine is notorious for performing quality clinical research, where controlled pre-arranged protocol is frequently interrupted. 
-    </p>
-    <p>
-        Standardized medical terminology and documentation system in critical care medicine could significantly improve the quality of data from ICU. 
-    </p>
-    <p>
-        Nowadays, every single piece of medical evidence comes from months of research efforts. Despite decades of hard work of our researcher and statisticians, we still frequently find ourselves in evidence-free zone. This is because emerging disease, basic science discovery, new diagnostic and therapeutic technologies, are evolving in a much faster pace than clinical research. During COVID-19 pandemic, it took the whole medical community 3 months to publish a convincing evidence for the first treatment. Clinical research shouldn’t be that hard. Clinicians should be able to access descriptive statistics real-time from electronic medical record with simply a few mouse clicks, in order to help with clinical decision making. With basic medical statistics training, a clinician should be able to perform hypothesis testing using data drawn real time from the electronic medical record. Instead of publishing, digesting, educating physicians of a new piece of evidence, I would like to develop system where evidence users could produce needed evidence in real time from available database. This approach would be much more effective than practicing in evidence-free zone and basing decision on single-digit number of cases from memory.
-    </p>
-    <p>
-        Tele-ICU is an exciting field in critical care medicine. The demand of which has significantly expanded during COVID-19 pandemic. While allowing ICU providers to manage patients remotely is its most important feature, the revolutionary effect of tele-ICU is that it proves ICU level of care could be provided solely based on digital data. Artificial intelligence will soon be able to train our computers to understand at least part of the ICU algorithm using these data, like we have already been doing with sepsis monitoring. We have trained all of our intensivists with the same set of data.
-    </p>
+    <section class="ps">
+    <p class="ps">
+            It was always recommended to start a personal statement with an unforgettable case, usually affects me personally. However, I am going to start mine with a series of cases that I have never met in person. In 2012, when I was in my fifth year of medical school, I was introduced into a research project, trying to identify the effectiveness of using procalcitonin as a diagnostic test to differentiate lupus flare from systemic infection in pediatric patients. My mentor told me that there were at least 100 cases in our hospital during the past 5 years, much more than any other reported cohort. The whole hospital was still running on a paper-based information system. Even though all units had electronic workstations which could do orders, notes and flowsheets, every staff was required to print out and maintain a paper chart as patient’s only medical record. This of course created lots of huddles in clinical work: long wait for patient’s chart to arrive on the floor when patient has already arrived requiring immediate attention, extra work for staff trying to incorporate pieces of information into a chart, etc. What struck me at that time, was that I 
+        </p>
+        <p class="ps">
+            My primary drive to enter informatics is research. Critical care medicine is notorious for performing quality clinical research, where controlled pre-arranged protocol is frequently interrupted. 
+        </p>
+        <p class="ps">
+            Standardized medical terminology and documentation system in critical care medicine could significantly improve the quality of data from ICU. 
+        </p>
+        <p class="ps">
+            Nowadays, every single piece of medical evidence comes from months of research efforts. Despite decades of hard work of our researcher and statisticians, we still frequently find ourselves in evidence-free zone. This is because emerging disease, basic science discovery, new diagnostic and therapeutic technologies, are evolving in a much faster pace than clinical research. During COVID-19 pandemic, it took the whole medical community 3 months to publish a convincing evidence for the first treatment. Clinical research shouldn’t be that hard. Clinicians should be able to access descriptive statistics real-time from electronic medical record with simply a few mouse clicks, in order to help with clinical decision making. With basic medical statistics training, a clinician should be able to perform hypothesis testing using data drawn real time from the electronic medical record. Instead of publishing, digesting, educating physicians of a new piece of evidence, I would like to develop system where evidence users could produce needed evidence in real time from available database. This approach would be much more effective than practicing in evidence-free zone and basing decision on single-digit number of cases from memory.
+        </p>
+        <p class="ps">
+            Tele-ICU is an exciting field in critical care medicine. The demand of which has significantly expanded during COVID-19 pandemic. While allowing ICU providers to manage patients remotely is its most important feature, the revolutionary effect of tele-ICU is that it proves ICU level of care could be provided solely based on digital data. Artificial intelligence will soon be able to train our computers to understand at least part of the ICU algorithm using these data, like we have already been doing with sepsis monitoring. We have trained all of our intensivists with the same set of data.
+        </p>
+    </section>
+    <footer>
+        <a href=#top id="aboutlinktotop">Back to top</a>
+        <p>&copy; 2020 by Chengda Zhang</p>
+    </footer>
 </body>
 </html>
