--- a/publications.html
+++ b/publications.html
@@ -7,15 +7,50 @@
 </head>
 <body>
     <header>
-        <h1>Chengda Zhang, MD</h1>
+        <h1 id="top">Chengda Zhang, MD</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About me</a>
-            <a href="education.html">Education</a>
+            <a href="Experience.html">Experience</a>
             <a href="skills.html">Skills</a>
             <a class="current" href="publications.html">Publications</a>
             <a href="mailto:zhangcd07@outlook.com">Contact me</a>
         </nav>
     </header>
+    <section class="Experience">
+        <h2>Peer Reviewed Publications</h2>
+        <ol>
+            <li>Tian H, Tian D, <strong>Zhang C</strong>, Wang W, Wang L, Ge M, et al.. Efficacy of Folic Acid Therapy in Patients with Hyperhomocysteinemia. <i>Journal of the American College of Nutrition</i>. 2017 36 (7): 528-532</li>
+            <li><strong>Zhang C</strong>, Chow FC, Han Y, Xie J, Qiu Z, Guo F, et al.. Multicenter Cohort Study of Diabetes Mellitus and Impaired Fasting Glucose in HIV-infected Patients in China. <i>J Acquir Immune Defic Syndr</i>. 2015 68(3): 298-303</li>
+            <li><strong>Zhang C</strong>, Yuan Y, Qiu C, Zhang W. A Meta-analysis of 2-Year Effect After Surgery: Laparoscopic Roux-en-Y Gastric Bypass Versus Laparoscopic Sleeve Gastrectomy for Morbid Obesity and Diabetes Mellitus. <i>Obes Surg</i> 2014 24(9): 1528-35</li>
+            <li>Li T, Guo F, Li Y, <strong>Zhang C</strong>, Han Y, Lye W, et al.. An antiretroviral regimen containing 6 months of stavudine followed by long-term zidovudine for first-line HIV therapy is optimal in resource-limited settings: a prospective, multicenter study in China. <i>Chin Med J (Engl)</i> 2014,127:59-65.</li>
+            <li><strong>Zhang C</strong>, Wang W, Zhou M, Han Y, Xie J, Qiu Z, et al.. The interaction of CD4 T-cell count and nevirapine hepatotoxicity in China: a change in national treatment guidelines may be warranted. <i>J Acquir Immune Defic Syndr</i> 2013,62:540-545.</li>
+            <li>Zhou M, <strong>Zhang C</strong>, Fu Q, et al. An investigation on international exchange programs of eight-year medical college students. <i>Chinese Journal of Medical Education</i>, 2013 33(4): 512-514.</li>
+            <li>Wang H, Li Y, <strong>Zhang C</strong>, et al. Immunological and virological responses to cART in HIV/HBV co-infected patients from a multicenter cohort. <i>AIDS</i>, 2012 Sep 10;26(14):1755-63.</li>
+        </ol>
+        <h2>Products</h2>
+        <ol>
+            <li><a href="http://ci-fellowship.herokuapp.com/">Clinical Informatics Fellowship Application Tool</a>: Help clinical informatics fellowship applicants to decide what materials they need to prepare.</li>
+        </ol>
+        <h2>Conference Presentations</h2>
+        <ol>
+            <li><strong>Zhang C</strong>, Iftikhar H, Nair GB. Influence of Diabetes Mellitus Related Immune Dysfunction in Hospitalized Interstitial Lung Disease Patients. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
+            <li><strong>Zhang C</strong>, Iftikhar H, Nair GB. Attributes of Hospitalized Elderly Compared to Younger Patients with Interstitial Lung Disease. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
+            <li>Iftikhar H, Imam Z, <strong>Zhang C</strong>, Hehar J, Nair GB. Multiple Calcified Pulmonary Nodules: It Need Not Be What the Eye Doesn’t See. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
+            <li>Iftikhar H, <strong>Zhang C</strong>, Nair GB. Role of Respiratory Pathogens in Disease Outcomes in Hospitalized Patients with Interstitial Lung Disease. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
+            <li><strong>Zhang C</strong>, Iftikhar H, Niederman MS, Nair GB. Use of Steroids Prior to Hospitalization in Interstitial Lung Disease Patients Admitted with Pneumonia. <i>American Thoracic Society International Conference</i>, Rapid session presentation, San Diego, 2018</li>
+            <li>Iftikhar H, <strong>Zhang C</strong>, Hehar J, Nair G. An Unusual Case of Heroin Induced Central Diabetes Insipidus. <i>American Thoracic Society International Conference</i>, poster presentation, San Diego, 2018</li>
+            <li>Iftikhar H, <strong>Zhang C</strong>, Grasso-Knight G, Dalal BD. Asymmetric Migrating Diffuse Alveolar Hemorrhage. <i>American Thoracic Society International Conference</i>, poster presentation, San Diego, 2018</li>
+            <li>Iftikhar H, <strong>Zhang C</strong>, Figueroa Rodriguez F, Nair G. Multidrug Resistant Pathogens in Hospitalized Interstitial Lung Disease Patients. <i>American Thoracic Society International Conference</i>, poster presentation, San Diego, 2018</li>
+            <li>Iftikhar H, <strong>Zhang C</strong>, Hehar J, Bozyk PD, Nair G. Wait It is Not a Lab Error! An Uncommon Case of Serum Ammonia level greater than 1000 millimoles per litre and Normal Hepatic Function. <i>American Thoracic Society International Conference</i>, poster presentation, San Diego, 2018 </li>
+            <li><strong>Zhang C</strong>, Wang W, Li T, et al. CYP2B6 and ABCB1 Polymorphisms' Effects on Nevirapine Plasma Concentration in Chinese HIV-infected Patients: New SNP Loci were Found. <i>13th Asia-Pacific Congress of Clinical Microbiology and Infection</i>, poster presentation, Beijing, 2012</li>
+            <li><strong>Zhang C</strong>, Wang W, Li T, et al. The Interaction of CD4 T-Cell Count and Nevirapine Hepatotoxicity in China: A Change in National Treatment Guidelines is Warranted. <i>13th Asia-Pacific Congress of Clinical Microbiology and Infection</i>, poster presentation, Beijing, 2012</li>
+        </ol>
+    </section>
+
+    <footer>
+        <a href=#top id="aboutlinktotop">Back to top</a>
+        <p>&copy; 2020 by Chengda Zhang</p>
+    </footer>
 </body>
 </html>
