--- a/skills.html
+++ b/skills.html
@@ -7,15 +7,61 @@
 </head>
 <body>
     <header>
-        <h1>Chengda Zhang, MD</h1>
+        <h1 id="top">Chengda Zhang, MD</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About me</a>
-            <a href="education.html">Education</a>
+            <a href="Experience.html">Experience</a>
             <a class="current" href="skills.html">Skills</a>
             <a href="publications.html">Publications</a>
             <a href="mailto:zhangcd07@outlook.com">Contact me</a>
         </nav>
     </header>
+    <section class="Experience">
+        <h2>
+            Computer Programming
+        </h2>
+        <ul>
+            <li>
+                <a href="https://www.coursera.org/account/accomplishments/records/B3WW7BV46QTR">Introduction to HTML5</a> by University of Michigan on Coursera. Certificate earned at 05/25/2020
+            </li>
+            <li>
+                <a href="https://www.coursera.org/account/accomplishments/specialization/6A8DXK5VYCS6">Applied Data Science</a> by IBM on Coursera. Certificate earned at 05/16/2020 
+                <ul>
+                    <li>
+                        Python for Data Science and AI
+                    </li>
+                    <li>Data Analysis with Python</li>
+                    <li>Data Visualization with Python</li>
+                    <li>Applied Data Science Capstone</li>
+                </ul>
+            </li>
+            <li>
+                <a href="https://www.coursera.org/account/accomplishments/verify/2PMQT3RZGZEX">Build a Data Science Web App with Streamlit and Python</a> by Rhyme on Coursera. Certificate earned at 5/8/2020
+            </li>
+        </ul>
+        <h2>
+            Electronic Medical Record
+        </h2>
+        <ul>
+            <li>SNOMED CT Foundation Course by SNOMET CT</li>
+            <li>Advanced Excel skills for clinical research</li>
+        </ul>
+
+        <h2>
+            Clinical
+        </h2>
+        <ul>
+            <li>Emergency Neurological Life Support (ENLS) by Neurocritical Care Society. Certificate earned in 5/2020</li>
+            <li>Examination of Special Competence in Critical Care Echocardiography, Testamur status by National Board of Echocardiography. earned in 3/2020</li>
+            <li>Fundamental Critical Care Support by Society of Critical Care Medicine. Certificate earned in 10/2019</li>
+            <li>American Board of Internal Medicine by ABIM. Certificate earned in 9/2019</li>
+            
+        </ul>
+    </section>
+    <footer>
+        <a href=#top id="aboutlinktotop">Back to top</a>
+        <p>&copy; 2020 by Chengda Zhang</p>
+    </footer>
 </body>
 </html>
