--- a/publications.html
+++ b/publications.html
@@ -9,16 +9,24 @@
     <header>
         <h1 id="top">Chengda Zhang, MD</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About me</a>
-            <a href="Experience.html">Experience</a>
-            <a href="skills.html">Skills</a>
-            <a class="current" href="publications.html">Publications</a>
-            <a href="mailto:zhangcd07@outlook.com">Contact me</a>
+            <ul>
+                <li class="current"><a  href="index.html">Home</a></li>
+                <li><a href="about.html">About me</a></li>
+                <li><a href="Experience.html">Experience</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="publications.html">Publications</a>
+                    <ul>
+                        <li><a href="publications.html#journal">Journal</a></li>
+                        <li><a href="publications.html#products">Products</a></li>
+                        <li><a href="publications.html#conference">Conference</a></li>
+                    </ul>
+                </li>
+                <li><a href="mailto:zhangcd07@outlook.com">Contact me</a></li>
+            </ul>
         </nav>
     </header>
     <section class="Experience">
-        <h2>Peer Reviewed Publications</h2>
+        <h2 id="journal">Peer Reviewed Publications</h2>
         <ol>
             <li>Tian H, Tian D, <strong>Zhang C</strong>, Wang W, Wang L, Ge M, et al.. Efficacy of Folic Acid Therapy in Patients with Hyperhomocysteinemia. <i>Journal of the American College of Nutrition</i>. 2017 36 (7): 528-532</li>
             <li><strong>Zhang C</strong>, Chow FC, Han Y, Xie J, Qiu Z, Guo F, et al.. Multicenter Cohort Study of Diabetes Mellitus and Impaired Fasting Glucose in HIV-infected Patients in China. <i>J Acquir Immune Defic Syndr</i>. 2015 68(3): 298-303</li>
@@ -28,11 +36,11 @@
             <li>Zhou M, <strong>Zhang C</strong>, Fu Q, et al. An investigation on international exchange programs of eight-year medical college students. <i>Chinese Journal of Medical Education</i>, 2013 33(4): 512-514.</li>
             <li>Wang H, Li Y, <strong>Zhang C</strong>, et al. Immunological and virological responses to cART in HIV/HBV co-infected patients from a multicenter cohort. <i>AIDS</i>, 2012 Sep 10;26(14):1755-63.</li>
         </ol>
-        <h2>Products</h2>
+        <h2 id="products">Products</h2>
         <ol>
             <li><a href="http://ci-fellowship.herokuapp.com/">Clinical Informatics Fellowship Application Tool</a>: Help clinical informatics fellowship applicants to decide what materials they need to prepare.</li>
         </ol>
-        <h2>Conference Presentations</h2>
+        <h2 id="conference">Conference Presentations</h2>
         <ol>
             <li><strong>Zhang C</strong>, Iftikhar H, Nair GB. Influence of Diabetes Mellitus Related Immune Dysfunction in Hospitalized Interstitial Lung Disease Patients. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
             <li><strong>Zhang C</strong>, Iftikhar H, Nair GB. Attributes of Hospitalized Elderly Compared to Younger Patients with Interstitial Lung Disease. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
@@ -50,7 +58,7 @@
 
     <footer>
         <a href=#top id="aboutlinktotop">Back to top</a>
-        <p>&copy; 2020 by Chengda Zhang</p>
+        <p>Created and designed by Chengda Zhang</p>
     </footer>
 </body>
 </html>
