--- a/skills.html
+++ b/skills.html
@@ -9,12 +9,20 @@
     <header>
         <h1 id="top">Chengda Zhang, MD</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About me</a>
-            <a href="Experience.html">Experience</a>
-            <a class="current" href="skills.html">Skills</a>
-            <a href="publications.html">Publications</a>
-            <a href="mailto:zhangcd07@outlook.com">Contact me</a>
+            <ul>
+                <li class="current"><a  href="index.html">Home</a></li>
+                <li><a href="about.html">About me</a></li>
+                <li><a href="Experience.html">Experience</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="publications.html">Publications</a>
+                    <ul>
+                        <li><a href="publications.html#journal">Journal</a></li>
+                        <li><a href="publications.html#products">Products</a></li>
+                        <li><a href="publications.html#conference">Conference</a></li>
+                    </ul>
+                </li>
+                <li><a href="mailto:zhangcd07@outlook.com">Contact me</a></li>
+            </ul>
         </nav>
     </header>
     <section class="Experience">
@@ -61,7 +69,7 @@
     </section>
     <footer>
         <a href=#top id="aboutlinktotop">Back to top</a>
-        <p>&copy; 2020 by Chengda Zhang</p>
+        <p>Created and designed by Chengda Zhang</p>
     </footer>
 </body>
 </html>
