css course complete

--- a/skills.html
+++ b/skills.html
@@ -34,6 +34,9 @@
                 <a href="https://www.coursera.org/account/accomplishments/records/B3WW7BV46QTR">Introduction to HTML5</a> by University of Michigan on Coursera. Certificate earned at 05/25/2020
             </li>
             <li>
+                <a href="https://www.coursera.org/account/accomplishments/records/7R49DDTYVW5W">Introduction to CSS3</a> by University of Michigan on Coursera. Certificate earned at 05/27/2020
+            </li>
+            <li>
                 <a href="https://www.coursera.org/account/accomplishments/specialization/6A8DXK5VYCS6">Applied Data Science</a> by IBM on Coursera. Certificate earned at 05/16/2020 
                 <ul>
                     <li>
