--- a/index.html
+++ b/index.html
@@ -41,6 +41,21 @@
             <li>Promote and get involved in Tele-ICU and related technology developement</li>
             <li>Promote data-driven real-time decision support for ICU providers</li>
             <li>……</li>
+        </ul>    
+    </section>
+    <section class="Blog">
+        <h2>My recent work</h2>
+        <ul>
+            <li>
+                <h3><a href="COVID-19.html">My COVID-19 reading</a></h3>
+                <h4>5/27/2020</h4>
+                <p>In preparing for my upcoming MICU/COVID unit rotation at OHSU, I have read and summarized some of the recent guidelines.</p>
+            </li>
+            <li>
+                <h3><a href="NYC.html">Modeling of COVID-19 Disease Burden in New York City Neighborhoods Based on Location Data.</a></h3>
+                <h4>5/14/2020</h4>
+                <p>I used machine-learning method to identify high disease burden area in NYC</p>
+            </li>
         </ul>
     </section>
 
