--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p>In preparing for my upcoming MICU/COVID unit rotation at OHSU, I have read and summarized some of the recent guidelines.</p>
             </li>
             <li>
-                <h3><a href="NYC.html">Modeling of COVID-19 Disease Burden in New York City Neighborhoods Based on Location Data.</a></h3>
+                <h3><a href="NYC.html">Modeling of High COVID-19 Disease Burden Areas in New York City Using Location Data.</a></h3>
                 <h4>5/14/2020</h4>
                 <p>I used machine-learning method to identify high disease burden area in NYC</p>
             </li>
