--- a/NYC.html
+++ b/NYC.html
@@ -79,7 +79,7 @@
                                 <figurecaption>Figure 1 Distribution plot of predicted value using testing data vs actual data by multivariate linear regression</figurecaption>
                             </figure>
                             <br/>
-                            The model was evaluated using R2 score by 10-fold crossvalidation. The mean value for R2 was -1.34, indicating a poor prediction model.
+                            The model was evaluated using R2 score by 10-fold crossvalidation. The mean value for R2 was -1.34, indicating poor performance of the model.
                         </p>
                     </li>
                         <h5>Polynomial regression</h5>
@@ -89,7 +89,7 @@
                                 <figurecaption>Figure 2 Distribution plot of predicted value using testing data vs actual data by polynomial regression</figurecaption>
                             </figure>
                                 <br/>
-                            The model was evaluated using R2 score by 10-fold crossvalidation. The mean value for R2 was -34.88, indicating a poor prediction model.
+                            The model was evaluated using R2 score by 10-fold crossvalidation. The mean value for R2 was -34.88, indicating poor performance of the model.
                         </p>
 
                 </ol>
@@ -253,6 +253,9 @@
                 <p>We have identified two classifiers with relatively robust precision in identifying high disease burden neighborhood. However, those models have low sensitivity, and should not be used as the only decision support method.</p>
             </li>
         </ol>
+        <p>
+            This work is solely done by Chengda Zhang, MD. The source code of this work is available through <a href="https://github.com/zhangcd07/NYC-COVID-19/blob/master/COVIDprojectsubmit.ipynb">Github</a>.
+        </p>
     </section>
     <footer>
         <p>Created and designed by Chengda Zhang</p>
