--- a/NYC.html
+++ b/NYC.html
@@ -63,7 +63,7 @@
                         <h5>Feature selection</h5>
                         <p>All venues are categorized into 10 groups: Food, College or University, Event, Arts and Entertainment, Nightlife Spot, Outdoors or Recreation, Professional or Other Places, Shop or Services, Travel or Transport, and Residence. The number of venues of each group in a certain neighborhood will be used as features for linear regression as well as polynomial regression.
                             <br/>
-                            Foursquare also asigns a "Venue Category" parameter to each venue, which is more detailed than the above 10 groups. For example, a restaurant could be categorized as a "American restaurant" rather than the general term "food". All venues belongs to 412 venue categories. The number of venues of each venue category in a certain neighborhood will be used as features for Multi-layer Perceptron Classifier, Support Vector Classification, Random Forest Classifier and Gradient Boosting Classifier, after transformed with Sklearn Standard Scaler. 
+                            Foursquare also asigns a "Venue Category" parameter to each venue, which is more detailed than the above 10 groups. For example, a restaurant could be categorized as a "American restaurant" rather than the general term "food". All venues belongs to 412 venue categories. The number of venues of each venue category in a certain neighborhood will be used as features for Multi-layer Perceptron Classifier, Random Forest Classifier and Gradient Boosting Classifier, after transformed with Sklearn Standard Scaler. 
                         </p>
                     </li>
                 </ol>
@@ -258,6 +258,7 @@
         </p>
     </section>
     <footer>
+        <a href=#top id="aboutlinktotop">Back to top</a>
         <p>Created and designed by Chengda Zhang</p>
     </footer>
 </body>
