--- a/publications.html
+++ b/publications.html
@@ -42,6 +42,7 @@
         </ol>
         <h2 id="conference">Conference Presentations</h2>
         <ol>
+            <li><strong>Zhang C</strong> Modeling of High COVID-19 Disease Burden Areas in New York City Using Location Data. <i>Virtual Pacific Northwest Research Symposium</i>, Rapid session, Portland, 2020. <a href="NYC.html">Full report</a></li>
             <li><strong>Zhang C</strong>, Iftikhar H, Nair GB. Influence of Diabetes Mellitus Related Immune Dysfunction in Hospitalized Interstitial Lung Disease Patients. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
             <li><strong>Zhang C</strong>, Iftikhar H, Nair GB. Attributes of Hospitalized Elderly Compared to Younger Patients with Interstitial Lung Disease. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
             <li>Iftikhar H, Imam Z, <strong>Zhang C</strong>, Hehar J, Nair GB. Multiple Calcified Pulmonary Nodules: It Need Not Be What the Eye Doesn’t See. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
