--- a/skills.html
+++ b/skills.html
@@ -31,6 +31,9 @@
         </h2>
         <ul>
             <li>
+                <a href="https://www.coursera.org/account/accomplishments/records/7R49DDTYVW5W">Introduction to CSS3</a> by University of Michigan on Coursera. Certificate earned at 05/27/2020
+            </li>
+            <li>
                 <a href="https://www.coursera.org/account/accomplishments/records/B3WW7BV46QTR">Introduction to HTML5</a> by University of Michigan on Coursera. Certificate earned at 05/25/2020
             </li>
             <li>
