--- a/Experience.html
+++ b/Experience.html
@@ -10,9 +10,9 @@
         <h1>Chengda Zhang, MD</h1>
         <nav>
             <ul>
-                <li class="current"><a  href="index.html">Home</a></li>
+                <li><a  href="index.html">Home</a></li>
                 <li><a href="about.html">About me</a></li>
-                <li><a href="Experience.html">Experience</a></li>
+                <li class="current"><a href="Experience.html">Experience</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="publications.html">Publications</a>
                     <ul>
