--- a/publications.html
+++ b/publications.html
@@ -10,11 +10,11 @@
         <h1 id="top">Chengda Zhang, MD</h1>
         <nav>
             <ul>
-                <li class="current"><a  href="index.html">Home</a></li>
+                <li><a  href="index.html">Home</a></li>
                 <li><a href="about.html">About me</a></li>
                 <li><a href="Experience.html">Experience</a></li>
                 <li><a href="skills.html">Skills</a></li>
-                <li><a href="publications.html">Publications</a>
+                <li class="current"><a href="publications.html">Publications</a>
                     <ul>
                         <li><a href="publications.html#journal">Journal</a></li>
                         <li><a href="publications.html#products">Products</a></li>
