--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         <h2>My recent work</h2>
         <ul>
             <li>
+                <h3><a href="http://ci-fellowship.herokuapp.com/">CI fellowship application tool</a></h3>
+                <h4>6/29/2020</h4>
+                <p>This app will help CI fellowship applicants determine what materials are required for their application. Data is most recently updated in 6/2020 after the opening of ERAS.</p>
+            </li>
+            <li>
                 <h3><a href="COVID-19.html">My COVID-19 reading</a></h3>
                 <h4>5/27/2020</h4>
                 <p>In preparing for my upcoming MICU/COVID unit rotation at OHSU, I have read and summarized some of the recent guidelines.</p>
